Jumping bug solved

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -171,7 +171,7 @@ strong{
 }
 
 .titleWithMargin{
-	@include font-style($darkGray, 9.7vh, 400);
+	@include font-style($darkGray, 6.2rem, 400);
 	margin-top: 0;
 	padding-top: 4rem;
 	margin-bottom: 10.5rem;
